[package]
name = "sn"
version = "0.1.0"
authors = ["Benno Zeeman <bzeeman@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0"
serde_json = "1"
sn_node = "0.28.2"
structopt = "0.3"
tokio = "0.2"